--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="app/weather-widget/js/skycons.js"></script>
 
     <!-- System Config -->
     <script src="systemjs.config.js"></script>
